# crewai-everywhere

./: README.md  test_agentops.py
knowledge_extraction_flow/: README.md  pyproject.toml
knowledge_extraction_flow/src/knowledge_extraction_flow/: main.py
knowledge_extraction_flow/src/knowledge_extraction_flow/crews/doc_conversion_crew/: doc_conversion_crew.py
knowledge_extraction_flow/src/knowledge_extraction_flow/crews/doc_conversion_crew/config/: agents.yaml  tasks.yaml
knowledge_extraction_flow/src/knowledge_extraction_flow/tools/: __init__.py  file_conversion_tool.py  file_md_conversion_tool.py  file_upload_tool.py
mail_crew/: README.md  pyproject.toml  test_gmail_auth.py
mail_crew/src/mail_crew/: crew.py  main.py
mail_crew/src/mail_crew/config/: agents.yaml  tasks.yaml
mail_crew/src/mail_crew/tools/: gmail_tool.py  gmail_utility.py
topic_research_crew/: README.md  pyproject.toml
topic_research_crew/knowledge/: research_methodology.txt  research_source_preference.txt
topic_research_crew/src/topic_research_crew/: crew.py  main.py
topic_research_crew/src/topic_research_crew/config/: agents.yaml  tasks.yaml
topic_research_crew/src/topic_research_crew/db/: chroma.sqlite3
