[project]
name = "knowledge_extraction_flow"
version = "0.1.0"
description = "knowledge_extraction_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0",
]

[project.scripts]
kickoff = "knowledge_extraction_flow.main:kickoff"
plot = "knowledge_extraction_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
