[project]
name = "mail_crew"
version = "0.1.0"
description = "mail-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
mail_crew = "mail_crew.main:run"
run_crew = "mail_crew.main:run"
train = "mail_crew.main:train"
replay = "mail_crew.main:replay"
test = "mail_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
