[project]
name = "topic_research_crew"
version = "0.1.0"
description = "topic-research-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
topic_research_crew = "topic_research_crew.main:run"
run_crew = "topic_research_crew.main:run"
train = "topic_research_crew.main:train"
replay = "topic_research_crew.main:replay"
test = "topic_research_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
